// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table caption renders 1`] = `
.c2 {
  margin-bottom: 3px;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <table
    class="c1"
  >
    <caption
      class="c2"
    >
      Caption
    </caption>
  </table>
</div>
`;

exports[`Table renders 1`] = `
.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <table
    class="c1"
  />
</div>
`;

exports[`TableBody renders 1`] = `
.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <table
    class="c1"
  >
    <tbody
      class="StyledTable__StyledTableBody-sc-1m3u5g-3"
    />
  </table>
</div>
`;

exports[`TableCell border renders 1`] = `
.c2 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  text-align: start;
  border-top: solid 1px rgba(0,0,0,0.33);
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c3 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  text-align: start;
  border-top: solid 4px rgba(0,0,0,0.33);
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c4 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  text-align: start;
  border-right: solid 4px rgba(0,0,0,0.33);
  border-bottom: solid 12px rgba(0,0,0,0.33);
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <table
    class="c1"
  >
    <thead
      class="StyledTable__StyledTableHeader-sc-1m3u5g-4"
    >
      <tr
        class="StyledTable__StyledTableRow-sc-1m3u5g-2"
      >
        <td
          class="c2"
        />
        <td
          class="c3"
        />
        <td
          class="c4"
        />
      </tr>
    </thead>
  </table>
</div>
`;

exports[`TableCell plain renders 1`] = `
.c2 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  text-align: start;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <table
    class="c1"
  >
    <thead
      class="StyledTable__StyledTableHeader-sc-1m3u5g-4"
    >
      <tr
        class="StyledTable__StyledTableRow-sc-1m3u5g-2"
      >
        <td
          class="c2"
        />
      </tr>
    </thead>
  </table>
</div>
`;

exports[`TableCell renders 1`] = `
.c2 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  text-align: start;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c3 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  text-align: start;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c4 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  text-align: start;
  border-top: solid 1px rgba(0,0,0,0.33);
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <table
    class="c1"
  >
    <thead
      class="StyledTable__StyledTableHeader-sc-1m3u5g-4"
    >
      <tr
        class="StyledTable__StyledTableRow-sc-1m3u5g-2"
      >
        <td
          class="c2"
        />
      </tr>
    </thead>
    <tbody
      class="StyledTable__StyledTableBody-sc-1m3u5g-3"
    >
      <tr
        class="StyledTable__StyledTableRow-sc-1m3u5g-2"
      >
        <td
          class="c3"
        />
      </tr>
    </tbody>
    <tfoot
      class="StyledTable__StyledTableFooter-sc-1m3u5g-5"
    >
      <tr
        class="StyledTable__StyledTableRow-sc-1m3u5g-2"
      >
        <td
          class="c4"
        />
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`TableCell scope renders 1`] = `
.c2 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  text-align: start;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c3 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  text-align: start;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <table
    class="c1"
  >
    <thead
      class="StyledTable__StyledTableHeader-sc-1m3u5g-4"
    >
      <tr
        class="StyledTable__StyledTableRow-sc-1m3u5g-2"
      >
        <th
          class="c2"
          scope="col"
        />
      </tr>
    </thead>
    <tbody
      class="StyledTable__StyledTableBody-sc-1m3u5g-3"
    >
      <tr
        class="StyledTable__StyledTableRow-sc-1m3u5g-2"
      >
        <th
          class="c3"
          scope="row"
        />
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TableCell size renders 1`] = `
.c2 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  width: 96px;
  max-width: 96px;
  overflow: hidden;
  text-align: start;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c3 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  width: 192px;
  max-width: 192px;
  overflow: hidden;
  text-align: start;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c4 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  width: 384px;
  max-width: 384px;
  overflow: hidden;
  text-align: start;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c5 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  width: 768px;
  max-width: 768px;
  overflow: hidden;
  text-align: start;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c6 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  width: 50%;
  max-width: 50%;
  overflow: hidden;
  text-align: start;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c7 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  width: 33.33%;
  max-width: 33.33%;
  overflow: hidden;
  text-align: start;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c8 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  width: 66.66%;
  max-width: 66.66%;
  overflow: hidden;
  text-align: start;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c9 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  width: 25%;
  max-width: 25%;
  overflow: hidden;
  text-align: start;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c10 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  width: 75%;
  max-width: 75%;
  overflow: hidden;
  text-align: start;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <table
    class="c1"
  >
    <tbody
      class="StyledTable__StyledTableBody-sc-1m3u5g-3"
    >
      <tr
        class="StyledTable__StyledTableRow-sc-1m3u5g-2"
      >
        <td
          class="c2"
        />
        <td
          class="c3"
        />
        <td
          class="c4"
        />
        <td
          class="c5"
        />
      </tr>
    </tbody>
  </table>
  <table
    class="c1"
  >
    <tbody
      class="StyledTable__StyledTableBody-sc-1m3u5g-3"
    >
      <tr
        class="StyledTable__StyledTableRow-sc-1m3u5g-2"
      >
        <td
          class="c6"
        />
        <td
          class="c6"
        />
      </tr>
    </tbody>
  </table>
  <table
    class="c1"
  >
    <tbody
      class="StyledTable__StyledTableBody-sc-1m3u5g-3"
    >
      <tr
        class="StyledTable__StyledTableRow-sc-1m3u5g-2"
      >
        <td
          class="c7"
        />
        <td
          class="c8"
        />
      </tr>
    </tbody>
  </table>
  <table
    class="c1"
  >
    <tbody
      class="StyledTable__StyledTableBody-sc-1m3u5g-3"
    >
      <tr
        class="StyledTable__StyledTableRow-sc-1m3u5g-2"
      >
        <td
          class="c9"
        />
        <td
          class="c10"
        />
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TableCell verticalAlign renders 1`] = `
.c2 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  vertical-align: top;
  text-align: start;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c3 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  vertical-align: middle;
  text-align: start;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c4 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  vertical-align: bottom;
  text-align: start;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <table
    class="c1"
  >
    <thead
      class="StyledTable__StyledTableHeader-sc-1m3u5g-4"
    >
      <tr
        class="StyledTable__StyledTableRow-sc-1m3u5g-2"
      >
        <td
          class="c2"
        />
        <td
          class="c3"
        />
        <td
          class="c4"
        />
      </tr>
    </thead>
  </table>
</div>
`;

exports[`TableFooter renders 1`] = `
.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <table
    class="c1"
  >
    <tfoot
      class="StyledTable__StyledTableFooter-sc-1m3u5g-5"
    />
  </table>
</div>
`;

exports[`TableHeader renders 1`] = `
.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <table
    class="c1"
  >
    <thead
      class="StyledTable__StyledTableHeader-sc-1m3u5g-4"
    />
  </table>
</div>
`;

exports[`TableRow renders 1`] = `
.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <table
    class="c1"
  >
    <tbody
      class="StyledTable__StyledTableBody-sc-1m3u5g-3"
    >
      <tr
        class="StyledTable__StyledTableRow-sc-1m3u5g-2"
      />
    </tbody>
  </table>
</div>
`;
